package edu.fiuba.algo3.modelo.Direccion;

import edu.fiuba.algo3.modelo.General.Ubicacion;


public interface Direccion {
    void mover(Ubicacion ubicacion);

    Direccion direccionOpuesta();

    String asString();
}
